--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.13",
     "contentlayer2": "0.4.6",
+    "disqus-react": "^1.1.5",
     "esbuild": "0.20.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
