--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tailwind-nextjs-starter-blog",
   "version": "2.2.0",
   "private": true,
-  "homepage": "https://www.shaheermansoor.com",
+  "homepage": "https://Shaheer5.github.io/www.shaheermansoor.com",
   "scripts": {
     "start": "next dev",
     "dev": "cross-env INIT_CWD=$PWD next dev",
