--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_GISCUS_CATEGORY_ID=
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
+NEXT_GOOGLE_TAG_MANAGER_ID=
 NEXT_GOOGLE_ANALYTICS_ID=
 
 MAILCHIMP_API_KEY=
