--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ yarn-error.log*
 
 # FAQ folder
 /faq/
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
