--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "image-size": "1.0.0",
     "next": "^14.2.3",
     "next-contentlayer2": "0.4.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "pliny": "0.2.1",
     "postcss": "^8.4.24",
