--- a/public/static/favicons/manifest.json
+++ b/public/static/favicons/manifest.json
@@ -9,6 +9,18 @@
   "short_name": "SM",
   "icons": [
     {
+      "src": "/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-256x256.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
