--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky",
-    "postbuild": "cp icon-144x144.png public/static/favicons/icon-144x144.png"
+    "prepare": "husky"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
