--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
-    "@next/bundle-analyzer": "14.2.3",
-    "@next/third-parties": "^14.2.3",
+    "@next/bundle-analyzer": "15.3.3",
+    "@next/third-parties": "15.3.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.13",
-    "contentlayer2": "0.4.6",
-    "esbuild": "0.20.2",
+    "contentlayer2": "^0.5.8",
+    "esbuild": "^0.25.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
-    "next": "^14.2.3",
-    "next-contentlayer2": "0.4.6",
+    "next": "15.3.3",
+    "next-contentlayer2": "^0.5.8",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "pliny": "0.2.1",
+    "pliny": "^0.4.1",
     "postcss": "^8.4.24",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-snowfall": "^2.1.0",
     "react-type-animation": "^3.2.0",
     "reading-time": "1.5.0",
@@ -50,12 +50,12 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@types/mdx": "^2.0.12",
-    "@types/react": "^18.2.73",
+    "@types/react": "19.1.8",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.0.0",
@@ -72,5 +72,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "npm@10.8.1"
+  "packageManager": "npm@10.8.1",
+  "overrides": {
+    "@types/react": "19.1.8"
+  }
 }
